test/src/e2e_vm_tests/test_programs/should_fail/pub_abi/src/main.sw
contract;

pub abi Foo {
}

fn bar() -> bool {
    0 // recovery witness
}
